objects/RecordTypeSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Settings for a particular RecordType</description>
    <fields>
        <fullName>FullName__c</fullName>
        <description>RecordType FullName (Object API Name + &apos;.&apos; + DeveloperName)</description>
        <externalId>true</externalId>
        <inlineHelpText>RecordType DeveloperName</inlineHelpText>
        <label>FullName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OppProductScheduler__c</fullName>
        <description>Settings for the OppProductScheduler</description>
        <inlineHelpText>Settings for the OppProductScheduler</inlineHelpText>
        <label>OppProductScheduler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonIsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reason is required for this record when checked.</description>
        <label>ReasonIsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReasonRoot__c</fullName>
        <description>Unique Name of the Reason Rool</description>
        <inlineHelpText>Unique Name of the Reason Root</inlineHelpText>
        <label>Reason Root</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentIsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Primary Segment Required for this recordtype.</description>
        <inlineHelpText>Is the Primary Segment Required for this recordtype.</inlineHelpText>
        <label>SegmentIsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SegmentationRoot__c</fullName>
        <description>Developer Name of Segmentation Root</description>
        <inlineHelpText>Developer Name of Segmentation Root</inlineHelpText>
        <label>Segmentation Root</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>RecordType Settings</label>
</CustomObject>